changes MeasureSelect target to wrap overflowing text instead of hiding adds titles to improve accesibility corrects minor bugs on select styles

--- a/packages/vizbuilder/src/components/Sidebar/select.css
+++ b/packages/vizbuilder/src/components/Sidebar/select.css
@@ -44,13 +44,16 @@
       flex: 0 0;
       min-width: 1em;
     }
+
+    & .select-value {
+      width: 0;
+    }
   }
 
   & .select-value {
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
-    width: 0;
     padding-top: 3px;
     padding-bottom: 3px;
   }
